@@ -1,0 +1,38 @@
+// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; indent-tabs-mode: nil; -*-
+//
+//  RQuantLib -- R interface to the QuantLib libraries
+//
+//  Copyright (C) 2014         Michele Salvadore and Dirk Eddelbuettel
+//
+//  This file is part of RQuantLib.
+//
+//  RQuantLib is free software: you can redistribute it and/or modify
+//  it under the terms of the GNU General Public License as published by
+//  the Free Software Foundation, either version 2 of the License, or
+//  (at your option) any later version.
+//
+//  RQuantLib is distributed in the hope that it will be useful,
+//  but WITHOUT ANY WARRANTY; without even the implied warranty of
+//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//  GNU General Public License for more details.
+//
+//  You should have received a copy of the GNU General Public License
+//  along with RQuantLib.  If not, see <http://www.gnu.org/licenses/>.
+
+
+//  [[Rcpp::interfaces(r, cpp)]]
+
+#include <rquantlib.h>
+
+// [[Rcpp::export]]
+Rcpp::List CreateSchedule(Rcpp::List params) {
+  
+  QuantLib::Schedule schedule = getSchedule(params);
+  
+  Rcpp::DateVector dates(schedule.size());
+    for (unsigned int i = 0; i < schedule.size(); ++i){
+        QuantLib::Date d = schedule.date(i);
+        dates[i] = Rcpp::Date(d.month(), d.dayOfMonth(), d.year());
+    }
+    return Rcpp::List::create(Rcpp::Named("Date") = dates);
+}
